<package format="3">
  <name>hsrb_auto_diagnostics_msgs</name>
  <version>2.0.0</version>
  <description>HSRB devices diagnostic package</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>action_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>